--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "graphql",
+  "name": "graphql api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./src/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Joao Miranda",
   "license": "ISC",
   "dependencies": {
     "express": "4.16.3",
